--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -179,7 +179,9 @@
       <DependentUpon>SourceViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="PreviewHandlerFramework\ControlsKey.cs" />
+    <Compile Include="PreviewHandlerFramework\IOutlookPreviewHelper.cs" />
     <Compile Include="PreviewHandlerFramework\KeyControlAttribute.cs" />
+    <Compile Include="Service\OutlookPreview\OutlookPreviewHelper.cs" />
     <Compile Include="Service\Preview\HelperPreviewHandlers.cs" />
     <Compile Include="PInvoke\WindowAPI.cs" />
     <Compile Include="PreviewHandlerFramework\COMInterop\COLORREF.cs" />
@@ -394,6 +396,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Html\Error.htm" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WSUI.Core\WSUI.Core.csproj">
+      <Project>{d650f4e9-99fe-46ec-a59d-bf3a99652255}</Project>
+      <Name>WSUI.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
