--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -85,8 +85,11 @@
     <Compile Include="Controls\ProgressManager\ProgressWindow.xaml.cs">
       <DependentUpon>ProgressWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\WSUIFlowDocument.cs" />
+    <Compile Include="Controls\WSUIParagraph.cs" />
     <Compile Include="Controls\WSUIFlowDocumentViewer.cs" />
     <Compile Include="Controls\WSUIRun.cs" />
+    <Compile Include="Controls\WSUIScrollViewer.cs" />
     <Compile Include="Core\BaseSearchData.cs" />
     <Compile Include="Models\CommandSearchData.cs" />
     <Compile Include="Models\ContactSearchData.cs" />
